--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^2.0.45",
     "@types/raphael": "^2.1.30",
-    "raphael": "^2.2.7"
+    "@types/vue": "^2.0.0",
+    "jquery": "^3.2.1",
+    "prob.js": "^1.0.6",
+    "raphael": "^2.2.7",
+    "vue": "^2.3.3"
   }
 }
